--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-permissions": "^3.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
